[gd_scene load_steps=67 format=3 uid="uid://4xaqdp8x46q3"]

[ext_resource type="Script" path="res://battle/battle.gd" id="1_62dho"]
[ext_resource type="Script" path="res://battle/battle_animator.gd" id="2_ipy34"]
[ext_resource type="Texture2D" uid="uid://wms1mx2tepno" path="res://battle/sprites/front/cat-sith.png" id="2_pp3su"]
[ext_resource type="Shader" path="res://battle/sprite.gdshader" id="3_258tc"]
[ext_resource type="Texture2D" uid="uid://dqjbj2x03budc" path="res://battle/effects/growl.png" id="4_0f1k0"]
[ext_resource type="Texture2D" uid="uid://bquyv2dvslbeg" path="res://battle/effects/scratch.png" id="4_3r16g"]
[ext_resource type="Texture2D" uid="uid://canoabld5qs20" path="res://battle/effects/stat_boost.png" id="4_7wm8v"]
[ext_resource type="Texture2D" uid="uid://dchi32cbk6v8i" path="res://battle/effects/summon.png" id="4_wxfyl"]
[ext_resource type="Texture2D" uid="uid://4nfivuyyr34l" path="res://battle/sprites/back/cat-sith.png" id="5_cs675"]
[ext_resource type="Texture2D" uid="uid://bkf5ysfv4k137" path="res://battle/effects/stat_lower.png" id="5_i03p0"]
[ext_resource type="PackedScene" uid="uid://e8xfwq5j4g1b" path="res://ui/healthbar/healthbar.tscn" id="6_303qm"]
[ext_resource type="Texture2D" uid="uid://ddiebarodiyg4" path="res://battle/effects/bad_luck.png" id="7_b48e1"]
[ext_resource type="Texture2D" uid="uid://c7cs7ff0rekkt" path="res://battle/effects/gem.png" id="7_nkmn6"]
[ext_resource type="Texture2D" uid="uid://jxoo7ur6e0l4" path="res://battle/effects/leer.png" id="8_hbqhu"]
[ext_resource type="Script" path="res://battle/gem_sprite.gd" id="8_hx3xp"]
[ext_resource type="PackedScene" uid="uid://dichyeix0c5g3" path="res://ui/dialog/dialog.tscn" id="9_h1m2m"]
[ext_resource type="PackedScene" uid="uid://d3s1nxt7qpaqm" path="res://ui/choicebox/spell_chooser.tscn" id="10_24sqf"]
[ext_resource type="PackedScene" uid="uid://dht3x47llx8nr" path="res://ui/choicebox/battle_actions.tscn" id="11_d80gd"]
[ext_resource type="PackedScene" uid="uid://dyketwway3ubu" path="res://ui/popup/popup.tscn" id="13_hu1uc"]
[ext_resource type="PackedScene" uid="uid://wphpyoii23gm" path="res://ui/party_menu/party_menu.tscn" id="14_u5hny"]
[ext_resource type="PackedScene" uid="uid://q4cruliyg6x4" path="res://ui/choicebox/item_chooser.tscn" id="15_pduf7"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_k7cr1"]
shader = ExtResource("3_258tc")
shader_parameter/progress = 0.0
shader_parameter/animation = 2
shader_parameter/stat_boost_texture = ExtResource("4_7wm8v")
shader_parameter/stat_lower_texture = ExtResource("5_i03p0")

[sub_resource type="AtlasTexture" id="AtlasTexture_45qip"]
atlas = ExtResource("7_b48e1")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_82pwn"]
atlas = ExtResource("7_b48e1")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wbywi"]
atlas = ExtResource("7_b48e1")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1apf"]
atlas = ExtResource("7_b48e1")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fx2nv"]
atlas = ExtResource("7_b48e1")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gwnxk"]
atlas = ExtResource("7_b48e1")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0df0m"]
atlas = ExtResource("7_b48e1")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ong1y"]
atlas = ExtResource("7_b48e1")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vykhw"]
atlas = ExtResource("7_b48e1")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_58jcs"]
atlas = ExtResource("4_0f1k0")
region = Rect2(0, 0, 96, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_o0fmx"]
atlas = ExtResource("4_0f1k0")
region = Rect2(96, 0, 96, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_6qg04"]
atlas = ExtResource("4_0f1k0")
region = Rect2(192, 0, 96, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_ft3dp"]
atlas = ExtResource("4_0f1k0")
region = Rect2(288, 0, 96, 56)

[sub_resource type="AtlasTexture" id="AtlasTexture_gojai"]
atlas = ExtResource("8_hbqhu")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6eajp"]
atlas = ExtResource("8_hbqhu")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h1hcj"]
atlas = ExtResource("8_hbqhu")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fqqdo"]
atlas = ExtResource("8_hbqhu")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_08j4w"]
atlas = ExtResource("8_hbqhu")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3n7re"]
atlas = ExtResource("4_3r16g")
region = Rect2(0, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_55gu4"]
atlas = ExtResource("4_3r16g")
region = Rect2(40, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_d6ifr"]
atlas = ExtResource("4_3r16g")
region = Rect2(80, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_nkx6p"]
atlas = ExtResource("4_3r16g")
region = Rect2(120, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_61qvo"]
atlas = ExtResource("4_3r16g")
region = Rect2(160, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_xmacr"]
atlas = ExtResource("4_3r16g")
region = Rect2(200, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_3r0mu"]
atlas = ExtResource("4_wxfyl")
region = Rect2(120, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_yixou"]
atlas = ExtResource("4_wxfyl")
region = Rect2(80, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_lny8s"]
atlas = ExtResource("4_wxfyl")
region = Rect2(40, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_ysv81"]
atlas = ExtResource("4_wxfyl")
region = Rect2(0, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_yq7w6"]
atlas = ExtResource("4_wxfyl")
region = Rect2(0, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_4bjno"]
atlas = ExtResource("4_wxfyl")
region = Rect2(40, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_yfq6l"]
atlas = ExtResource("4_wxfyl")
region = Rect2(80, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_y0qjt"]
atlas = ExtResource("4_wxfyl")
region = Rect2(120, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_lfuqd"]
atlas = ExtResource("4_wxfyl")
region = Rect2(160, 0, 40, 40)

[sub_resource type="SpriteFrames" id="SpriteFrames_t2tca"]
animations = [{
"frames": [{
"duration": 5.0,
"texture": SubResource("AtlasTexture_45qip")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_82pwn")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_wbywi")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_f1apf")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_fx2nv")
}, {
"duration": 10.0,
"texture": SubResource("AtlasTexture_gwnxk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0df0m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ong1y")
}, {
"duration": 10.0,
"texture": SubResource("AtlasTexture_vykhw")
}],
"loop": false,
"name": &"bad_luck",
"speed": 24.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_58jcs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o0fmx")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_6qg04")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_ft3dp")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_6qg04")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_ft3dp")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_6qg04")
}],
"loop": false,
"name": &"growl",
"speed": 14.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gojai")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6eajp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h1hcj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fqqdo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_08j4w")
}],
"loop": false,
"name": &"leer",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3n7re")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_55gu4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d6ifr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nkx6p")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_61qvo")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_xmacr")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_61qvo")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_xmacr")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_61qvo")
}],
"loop": false,
"name": &"scratch",
"speed": 24.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3r0mu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yixou")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lny8s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ysv81")
}],
"loop": false,
"name": &"summon",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yq7w6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4bjno")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yfq6l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y0qjt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lfuqd")
}],
"loop": false,
"name": &"unsummon",
"speed": 12.0
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1qpqh"]
shader = ExtResource("3_258tc")
shader_parameter/progress = null
shader_parameter/animation = null
shader_parameter/stat_boost_texture = ExtResource("4_7wm8v")
shader_parameter/stat_lower_texture = ExtResource("5_i03p0")

[sub_resource type="AtlasTexture" id="AtlasTexture_nf1md"]
atlas = ExtResource("7_nkmn6")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bihw8"]
atlas = ExtResource("7_nkmn6")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ft22"]
atlas = ExtResource("7_nkmn6")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4hyh8"]
atlas = ExtResource("7_nkmn6")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ld7ei"]
atlas = ExtResource("7_nkmn6")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fi71w"]
atlas = ExtResource("7_nkmn6")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1tgyl"]
atlas = ExtResource("7_nkmn6")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_2ked5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nf1md")
}],
"loop": false,
"name": &"catch",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bihw8")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ft22")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4hyh8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ld7ei")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fi71w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1tgyl")
}],
"loop": false,
"name": &"flash",
"speed": 7.0
}]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_bykr6"]
blend_mode = 1

[node name="battle" type="Node2D"]
texture_filter = 1
script = ExtResource("1_62dho")

[node name="animator" type="Node2D" parent="."]
script = ExtResource("2_ipy34")

[node name="bg" type="ColorRect" parent="."]
offset_right = 320.0
offset_bottom = 288.0
color = Color(0.901961, 0.890196, 0.847059, 1)

[node name="enemy_sprite" type="Sprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_k7cr1")
position = Vector2(256, 64)
scale = Vector2(2, 2)
texture = ExtResource("2_pp3su")
region_rect = Rect2(0, 0, 40, 40)

[node name="animation" type="AnimatedSprite2D" parent="enemy_sprite"]
sprite_frames = SubResource("SpriteFrames_t2tca")
animation = &"scratch"

[node name="player_sprite" type="Sprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_1qpqh")
position = Vector2(56, 184)
scale = Vector2(2, 2)
texture = ExtResource("5_cs675")

[node name="animation" type="AnimatedSprite2D" parent="player_sprite"]
sprite_frames = SubResource("SpriteFrames_t2tca")
animation = &"bad_luck"
frame = 8
frame_progress = 1.0

[node name="enemy_healthbar" parent="." instance=ExtResource("6_303qm")]
offset_left = 4.0
offset_top = 6.0
offset_right = 44.0
offset_bottom = 46.0
is_enemy = true

[node name="player_healthbar" parent="." instance=ExtResource("6_303qm")]
offset_left = 164.0
offset_top = 157.0
offset_right = 204.0
offset_bottom = 197.0

[node name="gem_sprite" type="AnimatedSprite2D" parent="."]
position = Vector2(256, 108)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_2ked5")
animation = &"flash"
frame = 4
frame_progress = 1.0
centered = false
offset = Vector2(-8, -16)
script = ExtResource("8_hx3xp")

[node name="dialog" parent="." instance=ExtResource("9_h1m2m")]
offset_left = 2.0
offset_top = 231.0
offset_right = 318.0
offset_bottom = 287.0

[node name="party_menu" parent="." instance=ExtResource("14_u5hny")]
visible = false
offset_left = 112.0
offset_top = 86.0
offset_right = 318.0
offset_bottom = 231.0

[node name="item_warning" parent="." instance=ExtResource("13_hu1uc")]
visible = false
offset_top = 205.0
offset_bottom = 224.0
timeout_duration = 1.5
y_align = 1

[node name="exp_timer" type="Timer" parent="."]
one_shot = true

[node name="battle_actions" parent="." instance=ExtResource("11_d80gd")]
visible = false
offset_left = 176.0
offset_top = 231.0
offset_right = 318.0
offset_bottom = 287.0

[node name="spell_chooser" parent="." instance=ExtResource("10_24sqf")]
visible = false
offset_left = 2.0
offset_top = 231.0
offset_right = 236.0
offset_bottom = 287.0

[node name="item_chooser" parent="." instance=ExtResource("15_pduf7")]
visible = false
offset_left = 2.0
offset_top = 103.0
offset_right = 148.0
offset_bottom = 231.0

[node name="whiteout" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
material = SubResource("CanvasItemMaterial_bykr6")
offset_right = 320.0
offset_bottom = 288.0
color = Color(0.901961, 0.890196, 0.847059, 1)
